[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/uitheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/ChessMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font_large_top.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ModeTip.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/ModeTip.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 12.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0.580392 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SizeMenu" type="MarginContainer"]
margin_right = 1025.0
margin_bottom = 600.0
theme = ExtResource( 1 )
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 1005.0
margin_bottom = 580.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 228.0
margin_right = 756.0
margin_bottom = 87.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Select Mode"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 317.0
margin_top = 122.0
margin_right = 667.0
margin_bottom = 418.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 25

[node name="FreeplayBtn" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 82.0
rect_min_size = Vector2( 150, 0 )
text = "Freeplay"

[node name="TimeTrialBtn" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 350.0
margin_bottom = 189.0
rect_min_size = Vector2( 150, 0 )
text = "Time Trial"

[node name="CountdownBtn" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 350.0
margin_bottom = 296.0
rect_min_size = Vector2( 320, 0 )
text = "Countdown"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_top = 458.0
margin_right = 158.0
margin_bottom = 540.0
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Back"

[node name="Control" type="Control" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 1005.0
margin_bottom = 580.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_bottom = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeTip" type="PanelContainer" parent="Control/MarginContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 326.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "No pressure, just practice..."

[node name="ModeTip2" type="PanelContainer" parent="Control/MarginContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 326.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "Get 30 hits as fast as you can!"

[node name="ModeTip3" type="PanelContainer" parent="Control/MarginContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 326.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "Get as many hits as you can in 30 seconds!"
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/FreeplayBtn" to="." method="_on_FreeplayBtn_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/FreeplayBtn" to="." method="_on_FreeplayBtn_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/FreeplayBtn" to="." method="_on_FreeplayBtn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/TimeTrialBtn" to="." method="_on_TimeTrialBtn_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/TimeTrialBtn" to="." method="_on_TimeTrialBtn_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TimeTrialBtn" to="." method="_on_TimeTrialBtn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/CountdownBtn" to="." method="_on_CountdownBtn_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/CountdownBtn" to="." method="_on_CountdownBtn_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CountdownBtn" to="." method="_on_CountdownBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
